test/sema/invalid-operand-to-logical-not.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    var foo = 42;
    // CHECK: [[@LINE+1]]:10: error: type 'int' is not convertible to boolean
    if (!foo) { }
}
